ingress/simple-nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-webserver-nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: simple
        component: webserver-nginx
    spec:
      containers:
        - name: webserver
          image: nginx:latest
          ports:
            - containerPort: 80
              name: web

---
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx
  labels:
    app: simple
    component: webserver-nginx
spec:
  ports:
    - port: 80
      name: web
  selector:
    app: simple
    component: webserver-nginx
