ingress/simple-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: simple-tomcat
          servicePort: 8080
      - path: /nginx
        backend:
          serviceName: simple-nginx
          servicePort: 80
